Update title and button text in HTML file

--- a/Aura bio system v5.323.html
+++ b/Aura bio system v5.323.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Aura Bio System  - v5.323</title>
+    <title>Aura Bio System - v5.323</title>
     <script src="https://cdn.jsdelivr.net/npm/lucide@0.321.0/dist/umd/lucide.min.js"></script>
     <style>
         :root {
@@ -90,7 +90,7 @@
         </select>
     </div>
 
-    <button class="btn-accent" onclick="saveProfile()" data-i18n="save">Update Bio-Profile</button>
+    <button class="btn-accent" onclick="saveProfile()" data-i18n="save">Update Profile</button>
     <button onclick="toggleTheme()" class="btn-accent" style="background:#475569; color:white;">Toggle Visual Mode</button>
 </div>
 
@@ -124,7 +124,7 @@
             <span id="active-goal">GOAL: RECOVERY</span>
         </div>
         <div id="chat-stream">
-            Aura: Bio-systems initialized. Sensors calibrated. How can I assist with your health or mathematical needs today?
+            Aura: Bio-system initialized. Sensors calibrated.HI i'm Aura AI, How can I assist with your health or mathematical needs today?
         </div>
         
         <div class="hr-visualizer" id="hr-bars"></div>
